task1/test_results_defects/infer_test/invalid_memory_access/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/invalid_memory_access.c:147: error: Dangling Pointer Dereference
  uninitialized pointer `ptr` could be dangling and is dereferenced or freed at line 147, column 14.
  145. 	if (count ==0)
  146. 	{
  147.     	count = *ptr; /*Tool should detect this line as error*/ /*ERROR:Invalid memory access to already freed area*/
                    ^
  148. 		return 1;
  149. 	}

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/invalid_memory_access.c:270: error: Use After Free
  Pulse found a potential null pointer dereference  on line 269.
  268. 	free(u->s1);
  269. 	free(u);
  270. 	p->s1->a[0] = 1; /*Tool should detect this line as error*/ /*ERROR:Invalid memory access to already freed area*/
        ^
  271.     }
  272. }

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/invalid_memory_access.c:320: error: Buffer Overrun L2
  Offset: [0, 4] Size: 4.
  318. 	    break;
  319. 	}
  320. 	 *(ptr+i) = i; /*Tool should detect this line as error*/ /*ERROR:Invalid memory access to already freed area*/
         ^
  321. }
  322. 

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/invalid_memory_access.c:377: error: Use After Free
  Pulse found a potential null pointer dereference  on line 349 indirectly during the call to `invalid_memory_access_012_func_001()`in call to `invalid_memory_access_012_func_001()` .
  375. {
  376. 	int ret;
  377. 	ret = invalid_memory_access_012_func_001 (1);
              ^
  378. 	printf("%d",ret);
  379. }

Found 4 issues
                                  Issue Type(ISSUED_TYPE_ID): #
                              Use After Free(USE_AFTER_FREE): 2
  Dangling Pointer Dereference(DANGLING_POINTER_DEREFERENCE): 1
                        Buffer Overrun L2(BUFFER_OVERRUN_L2): 1
